BM-Main/x64/Debug/BM-Main.log
  avr-g++ -MM -MG -DF_CPU=16000000 -I./include -mmcu=atmega328p -Wall -Wextra -Wconversion -std=c++17 -Os -fconcepts  -fno-exceptions -fno-unwind-tables -fno-rtti -fno-threadsafe-statics  -funsigned-char -funsigned-bitfields -fshort-enums  main.cc | sed "s/main\.o/& main.d/g" > main.d
  avr-g++ -mmcu=atmega328p -Wall -Wextra -Wconversion -std=c++17 -Os -fconcepts  -fno-exceptions -fno-unwind-tables -fno-rtti -fno-threadsafe-statics  -funsigned-char -funsigned-bitfields -fshort-enums  -DF_CPU=16000000 -I./include  -c -o main.o main.cc
  In file included from main.cc:15:
ADC.h(59,5): warning G93EE9793: "/*" within comment [-Wcomment]
       /*int a = (int)ADCSRA;
        
ADC.h(126,16): error GA58C493E: 'adcInterrupt' has not been declared
     ADConverter *adcInterrupt::ownerAdc = nullptr;
                  ^~~~~~~~~~~~
ADC.h(128,8): error GA58C493E: 'adcInterrupt' has not been declared
     void adcInterrupt::serviceRoutine() {
          ^~~~~~~~~~~~
  ADC.h: In function 'void BMCPP::Hal::serviceRoutine()':
ADC.h(130,17): error G36C95263: 'volatile uint16_t BMCPP::Hal::ADConverter::adc_result [8]' is private within this context
       ++ownerAdc->adc_result[0];
                   ^~~~~~~~~~
  ADC.h:99:44: note: declared private here
      volatile uint16_t adc_result[maximum_adc];
                                              ^
  In file included from main.cc:16:
  uart.c: In function 'void __vector_19()':
uart.c(422,23): warning G04C62F8D: conversion from 'int' to 'uint8_t' {aka 'unsigned char'} may change value [-Wconversion]
           UART0_CONTROL &= ~_BV(UART0_UDRIE);
                         ^
  main.cc: In function 'int main()':
main.cc(77,9): error G7A6DA149: 'class BMCPP::Hal::ADConverter' has no member named 'i'
     a = t.i;
           ^
  make: *** [<builtin>: main.o] Error 1
C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\IDE\VC\VCTargets\Microsoft.MakeFile.Targets(44,5): error MSB3073: Der Befehl "make" wurde mit dem Code 2 beendet.
